// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas de usuarios Muestra cuando el usuario es administrador 1`] = `
<Router
  location={
    Object {
      "hash": "",
      "key": "default",
      "pathname": "/",
      "search": "",
      "state": null,
    }
  }
  navigationType="POP"
  navigator={
    Object {
      "action": "POP",
      "back": [Function],
      "block": [Function],
      "createHref": [Function],
      "forward": [Function],
      "go": [Function],
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "default",
        "pathname": "/",
        "search": "",
        "state": null,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <Routes>
    <Route
      element={
        <AdminRouters
          isAdmin={false}
        >
          <Crud />
        </AdminRouters>
      }
      path="/controlDatos"
    />
  </Routes>
</Router>
`;

exports[`Pruebas de usuarios Muestre cuando el usuario esta autenticado 1`] = `
<Router
  location={
    Object {
      "hash": "",
      "key": "default",
      "pathname": "/",
      "search": "",
      "state": null,
    }
  }
  navigationType="POP"
  navigator={
    Object {
      "action": "POP",
      "back": [Function],
      "block": [Function],
      "createHref": [Function],
      "forward": [Function],
      "go": [Function],
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "default",
        "pathname": "/",
        "search": "",
        "state": null,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <Routes>
    <Route
      element={
        <PrivateRouter
          isAuthenticated={false}
        >
          <Dasboard />
        </PrivateRouter>
      }
      path="/*"
    />
  </Routes>
</Router>
`;
